markdown の css をコンポーネントから読み込む

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,8 +17,7 @@ const { title, description } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
     <meta name="description" content={description ?? ""} />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="stylesheet" href="/prism-vsc-dark-plus.css" />
+    <link rel="icon" type="image/svg+xml" href="/my-astro-blog/favicon.svg" />
   </head>
   <body>
     <slot />
