--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -3,6 +3,7 @@ import { marked } from "../../lib/marked";
 import { Tag, BlogPost, contentfulClient } from "../../lib/contentful";
 import Layout from "../../layouts/Layout.astro";
 import type { Entry } from "contentful";
+import "../../styles/prism-vsc-dark-plus.css";
 
 interface Props {
   title: string;
