--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,7 +25,7 @@ const posts = entries.items.map((item) => {
       {
         posts.map((post) => (
           <li>
-            <a href={`/posts/${post.slug}`}>{post.title}</a>
+            <a href={`/my-astro-blog/posts/${post.slug}`}>{post.title}</a>
             <p>{post.description}</p>
             <p>{post.date}</p>
           </li>
