prism から highlight.js へ変更

--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -3,7 +3,7 @@ import { marked } from "../../lib/marked";
 import { Tag, BlogPost, contentfulClient } from "../../lib/contentful";
 import Layout from "../../layouts/Layout.astro";
 import type { Entry } from "contentful";
-import "../../styles/prism-vsc-dark-plus.css";
+import "../../styles/night-owl.css";
 
 interface Props {
   title: string;
